--- a/Src/Services/Catalog/Catalog.Api/appsettings.json
+++ b/Src/Services/Catalog/Catalog.Api/appsettings.json
@@ -1,4 +1,27 @@
+//{
+//  {
+//    "DatabaseSettings": {
+//      "ConnectionString": "mongodb://localhost:27017",
+//      "DatabaseName": "ProductDb",
+//      "CollectionName": "Products"
+//    },
+
+//    "Logging": {
+//      "LogLevel": {
+//        "Default": "Information",
+//        "Microsoft": "Warning",
+//        "Microsoft.Hosting.Lifetime": "Information"
+//      }
+//    },
+//    "AllowedHosts": "*"
+//  }
+//}
 {
+  "DatabaseSettings": {
+    "ConnectionString": "mongodb://localhost:27017",
+    "DatabaseName": "ProductDb",
+    "CollectionName": "Products"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
