--- a/Src/docker-compose.override.yml
+++ b/Src/docker-compose.override.yml
@@ -2,12 +2,18 @@ version: '3.4'
 
 services:
   catalogdb:
-    container_name: mongodb
+    container_name: catalogdb
     restart: always
     ports:
       - "27017:27017"
     volumes:
       -  mongo_data:/data/db
+  basketdb:
+    container_name: basketdb
+    restart: always
+    ports:
+      - "6379:6379"
+   
   
      
    
@@ -20,3 +26,14 @@ services:
       - catalogdb
     ports:
        - "8000:80"
+
+  basket.api:
+    container_name: basket.api
+    environment:
+      - ASPNETCORE_ENVIRONMENT=Development
+      - "CacheSettings:ConnectionString=basketdb:6379"
+    depends_on:
+      - basketdb
+    ports:
+      - "8001:80"
+
