--- a/Src/docker-compose.yml
+++ b/Src/docker-compose.yml
@@ -5,6 +5,10 @@ services:
     image: mongo
   basketdb:
     image: redis:alpine
+  discountdb:
+    image: postgres
+  pgadmin:
+    image: dpage/pgadmin4
       
   catalog.api:
     image: ${DOCKER_REGISTRY-}catalogapi
@@ -17,5 +21,14 @@ services:
       context: .
       dockerfile: Services/Basket/Basket.Api/Dockerfile
 
+  discount.api:
+    image: ${DOCKER_REGISTRY-}discountapi
+    build:
+      context: .
+      dockerfile: Services/Discount/Discount.Api/Dockerfile
+
 volumes:
   mongo_data:
+  postgres_data:
+  pgadmin_data:
+
