--- a/Src/docker-compose.override.yml
+++ b/Src/docker-compose.override.yml
@@ -8,11 +8,13 @@ services:
       - "27017:27017"
     volumes:
       -  mongo_data:/data/db
+
   basketdb:
     container_name: basketdb
     restart: always
     ports:
       - "6379:6379"
+  
   discountdb:
     container_name: discountdb
     environment:
@@ -24,6 +26,7 @@ services:
         - "5432:5432"
     volumes:
       - postgres_data:/var/lib/postgresql/data/
+
   pgadmin:
     container_name: pgadmin
     environment:
@@ -34,10 +37,7 @@ services:
         - "5050:80"
     volumes:
       - pgadmin_data:/root/.pgadmin
-   
-  
-     
-   
+
   catalog.api:
     container_name: catalog.api
     environment:
@@ -58,10 +58,12 @@ services:
     ports:
       - "8001:80"
 
-
   discount.api:
+    container_name: discount.api
     environment:
       - ASPNETCORE_ENVIRONMENT=Development
+      - "DatabaseSettings:ConnectionString=Server=discountdb;Port=5432;Database=DiscountDb;User Id=admin;Password=admin1234;"
+    depends_on:
+      - discountdb
     ports:
-      - "80"
-
+      - "8002:80"
