--- a/Src/Services/Ordering/Ordering.Api/appsettings.json
+++ b/Src/Services/Ordering/Ordering.Api/appsettings.json
@@ -1,4 +1,10 @@
 {
+  //"ConnectionStrings": {
+  //  "OrderingConnectionString": "hyytfty"
+  //},
+  "ConnectionStrings": {
+    "OrderingConnectionString": "Server=localhost;Database=OrderDb;User Id=sa;Password=SwN12345678;"
+  },
   "Logging": {
     "LogLevel": {
       "Default": "Information",
