--- a/Src/Services/Ordering/Ordering.Api/Ordering.Api.csproj
+++ b/Src/Services/Ordering/Ordering.Api/Ordering.Api.csproj
@@ -14,7 +14,7 @@
 
   <ItemGroup>
     <ProjectReference Include="..\Ordering.Application\Ordering.Application.csproj" />
-    <ProjectReference Include="..\Ordering.infrastructure\Ordering.infrastructure.csproj" />
+    <ProjectReference Include="..\Ordering.infrastructure\Ordering.Infrastructure.csproj" />
   </ItemGroup>
 
 </Project>
